Add process stock feed lambda

--- a/serverless.yml
+++ b/serverless.yml
@@ -34,7 +34,7 @@ package:
 
 functions:
   add-partition:
-    description: "Add partition to car parts data"
+    description: "Add partitions to tables"
     role: ${ssm:/${self:service}/add-partition/lambda-iam-role/arn}
     handler: src.lambda.add_partition.main.lambda_handler
     package:
@@ -62,3 +62,34 @@ functions:
             key:
               prefix:
                 - supplier_stock/
+                - store/
+
+  process-stock-feed:
+    description: "Process stock feed"
+    role: ${ssm:/${self:service}/process-stock-feed/lambda-iam-role/arn}
+    handler: src.lambda.add_partition.main.lambda_handler
+    package:
+      patterns:
+        - "!node_modules/**"
+        - "!yarn.lock"
+        - "!package-lock.json"
+        - "!package.json"
+      include:
+        - "src/lambda/add_partition/**"
+        - "src/shared/**"
+        - "src/__init__.py"
+    timeout: 900
+    memorySize: 2048
+    layers:
+      - { Ref: PythonRequirementsLambdaLayer }
+    environment:
+      AWS_ACCOUNT_ID: ${self:custom.environment.awsAccountId}
+    events:
+      - s3:
+          bucket: ${self:custom.bucketName}
+          event: s3:ObjectCreated:*
+          existing: true
+          filter:
+            key:
+              prefix:
+                - stock_feed/
