--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -52,9 +52,38 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Update or Install AWS CLI
+        run: |
+          curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip -o awscliv2.zip
+          sudo ./aws/install --update
+
+      - name: Check AWS CLI Version
+        run: aws --version
+
+      - name: Assume AWS Role
+        env:
+          AWS_DEFAULT_REGION: eu-west-2
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          output=$(aws sts assume-role --role-arn arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/DevAdminRole --role-session-name MySession)
+          echo "AWS_ACCESS_KEY_ID=$(echo $output | jq -r .Credentials.AccessKeyId)" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=$(echo $output | jq -r .Credentials.SecretAccessKey)" >> $GITHUB_ENV
+          echo "AWS_SESSION_TOKEN=$(echo $output | jq -r .Credentials.SessionToken)" >> $GITHUB_ENV
+
+      - name: Install Python 3.11
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3.11 python3.11-venv python3.11-dev
+
+      - name: Install SAM CLI
+        run: |
+          pip3 install aws-sam-cli
+
       - name: Build Lambda Function
         run: |
-              sam build --template-file template.yml
+          sam build --template-file template.yml
 
       - name: Deploy All Lambda Functions
         run: |
@@ -64,5 +93,4 @@ jobs:
                 --parameter-overrides Project=${{ env.AWS_ACCOUNT_ID }} ServiceName=test \
                 --profile dev \
                 --no-confirm-changeset
-
 
