Try using SAM 15

--- a/template.yml
+++ b/template.yml
@@ -15,4 +15,11 @@ Resources:
         - S3ReadPolicy:
             BucketName: "rtg-automotive-bucket-654654324108"
         - GlueFullAccess 
-        - SNSPublishPolicy
+        - PolicyName: SNSPublishPolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action: 
+                  - sns:Publish
+                Resource: "*"
