--- a/template.yml
+++ b/template.yml
@@ -8,6 +8,7 @@ Resources:
       Runtime: python3.11
       MemorySize: 2048
       Timeout: 900
+      Role: ${ssm:/rtg-automotive/add-partition/lambda-iam-role/arn}
       Policies:
         - S3ReadPolicy:
             BucketName: "rtg-automotive-bucket-654654324108"
