--- a/template.yml
+++ b/template.yml
@@ -18,8 +18,6 @@ Resources:
           - Id: "DeleteOldObjects"
             Status: "Enabled"
             ExpirationInDays: 30
-            Filter:
-              Prefix: "supplier_stock/"
 
   AddPartitionFunction:
     Type: AWS::Serverless::Function
@@ -49,3 +47,14 @@ Resources:
       Environment:
         Variables:
           AWS_ACCOUNT_ID: !Ref AWSAccountId
+      Events:
+        S3PutEvent:
+          Type: S3
+          Properties:
+            Bucket: !Ref MyS3Bucket
+            Events: s3:ObjectCreated:Put
+            Filter:
+              S3Key:
+                Rules:
+                  - Name: prefix
+                    Value: supplier_stock/
