Specify directory with code

--- a/infra/template.yml
+++ b/infra/template.yml
@@ -49,6 +49,7 @@ Resources:
       Environment:
         Variables:
           AWS_ACCOUNT_ID: !Ref AWSAccountId
+      CodeUri: src/lambda/add_partition/ 
       Events:
         S3PutEvent:
           Type: S3
