Move up a directory 3

--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -13,10 +13,11 @@ on:
 jobs:
   infra:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./infra
     steps:
+      - name: Go to infra directory
+        run: |
+          cd infra
+
       - name: Checkout Code
         uses: actions/checkout@v3
 
