--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -11,13 +11,12 @@ on:
       - "**dev-deploy-*"
 
 jobs:
-  infra:
+  terraform:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./infra
     steps:
-      - name: Go to infra directory
-        run: |
-          cd infra
-
       - name: Checkout Code
         uses: actions/checkout@v3
 
@@ -44,10 +43,10 @@ jobs:
           terraform plan -no-color -var-file env_dev.tfvars
           terraform apply -auto-approve -var-file env_dev.tfvars
 
-      - name: Move up a directory
-        run: |
-          cd ..
-
+  lambda:
+    needs: terraform
+    runs-on: ubuntu-latest
+    steps:
       - name: Install SAM CLI
         run: |
           pip3 install aws-sam-cli
