--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -70,25 +70,25 @@ jobs:
         run: |
           sam build --template-file template.yml
 
-      - name: Create Change Set
-        run: |
-          aws cloudformation create-change-set \
-            --stack-name ${{ env.PROJECT_NAME }}-lambda-stack-${{ env.STAGE }} \
-            --template-body file://template.yml \
-            --change-set-name ${{ env.PROJECT_NAME }}-change-set-${{ env.STAGE }} \
-            --parameters \
-              ParameterKey=AWSAccountId,ParameterValue=${{ env.AWS_ACCOUNT_ID }} \
-              ParameterKey=ProjectName,ParameterValue=${{ env.PROJECT_NAME }} \
-              ParameterKey=Stage,ParameterValue=${{ env.STAGE }} \
-            --capabilities CAPABILITY_IAM \
-            --region eu-west-2
+      # - name: Create Change Set
+      #   run: |
+      #     aws cloudformation create-change-set \
+      #       --stack-name ${{ env.PROJECT_NAME }}-lambda-stack-${{ env.STAGE }} \
+      #       --template-body file://template.yml \
+      #       --change-set-name ${{ env.PROJECT_NAME }}-change-set-${{ env.STAGE }} \
+      #       --parameters \
+      #         ParameterKey=AWSAccountId,ParameterValue=${{ env.AWS_ACCOUNT_ID }} \
+      #         ParameterKey=ProjectName,ParameterValue=${{ env.PROJECT_NAME }} \
+      #         ParameterKey=Stage,ParameterValue=${{ env.STAGE }} \
+      #       --capabilities CAPABILITY_IAM \
+      #       --region eu-west-2
 
-      - name: Execute Change Set
-        run: |
-          aws cloudformation execute-change-set \
-            --change-set-name ${{ env.PROJECT_NAME }}-change-set-${{ env.STAGE }} \
-            --stack-name ${{ env.PROJECT_NAME }}-lambda-stack-${{ env.STAGE }} \
-            --region eu-west-2
+      # - name: Execute Change Set
+      #   run: |
+      #     aws cloudformation execute-change-set \
+      #       --change-set-name ${{ env.PROJECT_NAME }}-change-set-${{ env.STAGE }} \
+      #       --stack-name ${{ env.PROJECT_NAME }}-lambda-stack-${{ env.STAGE }} \
+      #       --region eu-west-2
 
       - name: Deploy All Lambda Functions
         run: |
