--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -60,17 +60,41 @@ jobs:
           echo "AWS_ACCESS_KEY_ID=$(echo $output | jq -r .Credentials.AccessKeyId)" >> $GITHUB_ENV
           echo "AWS_SECRET_ACCESS_KEY=$(echo $output | jq -r .Credentials.SecretAccessKey)" >> $GITHUB_ENV
           echo "AWS_SESSION_TOKEN=$(echo $output | jq -r .Credentials.SessionToken)" >> $GITHUB_ENV
-          
+
       - name: Install SAM CLI
         run: |
           pip3 install aws-sam-cli
 
-      
+      - name: Check if Stack Exists
+        id: check_stack
+        run: |
+          if aws cloudformation describe-stacks --stack-name ${{ env.PROJECT_NAME }}-lambda-stack-${{ env.STAGE }}; then
+            echo "Stack exists."
+            echo "::set-output name=stack_exists::true"
+          else
+            echo "Stack does not exist."
+            echo "::set-output name=stack_exists::false"
+          fi
+
+      - name: Create Stack
+        if: steps.check_stack.outputs.stack_exists == 'false'
+        run: |
+          aws cloudformation create-stack \
+            --stack-name ${{ env.PROJECT_NAME }}-lambda-stack-${{ env.STAGE }} \
+            --template-body file://template.yml \
+            --parameters \
+              ParameterKey=AWSAccountId,ParameterValue=${{ env.AWS_ACCOUNT_ID }} \
+              ParameterKey=ProjectName,ParameterValue=${{ env.PROJECT_NAME }} \
+              ParameterKey=Stage,ParameterValue=${{ env.STAGE }} \
+            --capabilities CAPABILITY_IAM \
+            --region eu-west-2
+
       - name: Build Lambda Function
         run: |
           sam build --template-file template.yml
 
       - name: Create Change Set
+        if: steps.check_stack.outputs.stack_exists == 'true'
         run: |
           aws cloudformation create-change-set \
             --stack-name ${{ env.PROJECT_NAME }}-lambda-stack-${{ env.STAGE }} \
@@ -84,6 +108,7 @@ jobs:
             --region eu-west-2
 
       - name: Execute Change Set
+        if: steps.check_stack.outputs.stack_exists == 'true'
         run: |
           aws cloudformation execute-change-set \
             --change-set-name ${{ env.PROJECT_NAME }}-change-set-${{ env.STAGE }} \
