--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -86,7 +86,7 @@ jobs:
               ParameterKey=AWSAccountId,ParameterValue=${{ env.AWS_ACCOUNT_ID }} \
               ParameterKey=ProjectName,ParameterValue=${{ env.PROJECT_NAME }} \
               ParameterKey=Stage,ParameterValue=${{ env.STAGE }} \
-            --capabilities CAPABILITY_IAM \
+            --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND \
             --region eu-west-2
 
       - name: Build Lambda Function
@@ -104,7 +104,7 @@ jobs:
               ParameterKey=AWSAccountId,ParameterValue=${{ env.AWS_ACCOUNT_ID }} \
               ParameterKey=ProjectName,ParameterValue=${{ env.PROJECT_NAME }} \
               ParameterKey=Stage,ParameterValue=${{ env.STAGE }} \
-            --capabilities CAPABILITY_IAM \
+            --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND \
             --region eu-west-2
 
       - name: Execute Change Set
