--- a/template.yml
+++ b/template.yml
@@ -9,7 +9,7 @@ Parameters:
     Type: String
 
 Resources:
-  MyS3Bucket:
+  ProjectS3Bucket:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: !Sub "${ProjectName}-bucket-${AWSAccountId}"
@@ -20,6 +20,14 @@ Resources:
           - Id: "DeleteOldObjects"
             Status: "Enabled"
             ExpirationInDays: 30
+
+  AddPartitionLambdaLayer:
+    Type: AWS::Serverless::LayerVersion
+    Properties:
+      LayerName: !Sub "${ProjectName}-${Stage}-lambda-layer"
+      ContentUri: src/lambda/add_partition/layer
+      CompatibleRuntimes:
+        - python3.11
 
   AddPartitionFunction:
     Type: AWS::Serverless::Function
@@ -32,40 +40,42 @@ Resources:
       Role: !Sub "arn:aws:iam::${AWSAccountId}:role/${ProjectName}/add-partition/${ProjectName}-add-partition-lambda-role"
       Policies:
         - S3ReadPolicy:
-            BucketName: !Ref MyS3Bucket
+            BucketName: !Ref ProjectS3Bucket
       Environment:
         Variables:
           AWS_ACCOUNT_ID: !Ref AWSAccountId
+      Layers:
+        - !Ref AddPartitionLambdaLayer
       Events:
         S3PutEvent:
           Type: S3
           Properties:
-            Bucket: !Ref MyS3Bucket
+            Bucket: !Ref ProjectS3Bucket
             Events: s3:ObjectCreated:Put
 
-  ProcessStockFeedFunction:
-    Type: AWS::Serverless::Function
-    Properties: 
-      FunctionName: !Sub "${ProjectName}-${Stage}-process-stock-feed"
-      Handler: src/lambda/process_stock_feed.main.lambda_handler
-      Runtime: python3.11
-      MemorySize: 2048
-      Timeout: 900
-      Role: !Sub "arn:aws:iam::${AWSAccountId}:role/${ProjectName}/process-stock-feed/${ProjectName}-process-stock-feed-lambda-role"
-      Policies:
-        - S3ReadPolicy:
-            BucketName: !Ref MyS3Bucket
-      Environment:
-        Variables:
-          AWS_ACCOUNT_ID: !Ref AWSAccountId
-      Events:
-        S3PutEvent:
-          Type: S3
-          Properties:
-            Bucket: !Ref MyS3Bucket
-            Events: s3:ObjectCreated:Put
-            Filter:
-              S3Key:
-                Rules:
-                  - Name: prefix
-                    Value: stock_feed/
+  # ProcessStockFeedFunction:
+  #   Type: AWS::Serverless::Function
+  #   Properties: 
+  #     FunctionName: !Sub "${ProjectName}-${Stage}-process-stock-feed"
+  #     Handler: src/lambda/process_stock_feed.main.lambda_handler
+  #     Runtime: python3.11
+  #     MemorySize: 2048
+  #     Timeout: 900
+  #     Role: !Sub "arn:aws:iam::${AWSAccountId}:role/${ProjectName}/process-stock-feed/${ProjectName}-process-stock-feed-lambda-role"
+  #     Policies:
+  #       - S3ReadPolicy:
+  #           BucketName: !Ref ProjectS3Bucket
+  #     Environment:
+  #       Variables:
+  #         AWS_ACCOUNT_ID: !Ref AWSAccountId
+  #     Events:
+  #       S3PutEvent:
+  #         Type: S3
+  #         Properties:
+  #           Bucket: !Ref ProjectS3Bucket
+  #           Events: s3:ObjectCreated:Put
+  #           Filter:
+  #             S3Key:
+  #               Rules:
+  #                 - Name: prefix
+  #                   Value: stock_feed/
