--- a/.github/workflows/config_dev.yml
+++ b/.github/workflows/config_dev.yml
@@ -2,8 +2,6 @@ name: Github Actions Pipeline
 
 env:
   AWS_ACCOUNT_ID: "654654324108"
-  PROJECT_NAME: "rtg-automotive"
-  STAGE: "dev"
 
 on:
   push:
@@ -19,6 +17,15 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+
+      - name: Update or Install AWS CLI
+        run: |
+          curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip -o awscliv2.zip
+          sudo ./aws/install --update
+
+      - name: Check AWS CLI Version
+        run: aws --version
 
       - name: Assume AWS Role
         env:
@@ -37,18 +44,26 @@ jobs:
           terraform init -backend-config=backend/backend_config_dev.tfvars
           terraform plan -no-color -var-file env_dev.tfvars
           terraform apply -auto-approve -var-file env_dev.tfvars
-
-  lambda:
-    needs: terraform
+          
+  serverless:
     runs-on: ubuntu-latest
+    needs: terraform
+    env:
+      SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
+      SLS_DEBUG: "*"
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v2
+      - name: Setup Node.js (18.x)
+        uses: actions/setup-node@v3
         with:
-          python-version: '3.11'
+          node-version: 18.x
+
+      - name: Setup Python (3.11)
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.11
 
       - name: Assume AWS Role
         env:
@@ -61,17 +76,13 @@ jobs:
           echo "AWS_SECRET_ACCESS_KEY=$(echo $output | jq -r .Credentials.SecretAccessKey)" >> $GITHUB_ENV
           echo "AWS_SESSION_TOKEN=$(echo $output | jq -r .Credentials.SessionToken)" >> $GITHUB_ENV
 
-      - name: Install SAM CLI
+      - name: Install Serverless
         run: |
-          pip3 install aws-sam-cli
+          npm install -g serverless
+          npm init -y
+          npm install serverless-python-requirements
+          serverless requirements install --stage dev
 
-      - name: Deploy Lambdas
+      - name: Deploy with Serverless
         run: |
-          sam build --template-file template.yml
-          sam deploy --template-file template.yml \
-                --stack-name ${{ env.PROJECT_NAME }}-lambda-stack-${{ env.STAGE }} \
-                --capabilities CAPABILITY_IAM \
-                --parameter-overrides AWSAccountId=${{ env.AWS_ACCOUNT_ID }} ProjectName=${{ env.PROJECT_NAME }} Stage=${{ env.STAGE }} \
-                --region eu-west-2 \
-                --resolve-s3 \
-                --no-fail-on-empty-changeset
+          serverless deploy --stage dev
