--- a/dev.yml
+++ b/dev.yml
@@ -1,1 +1,6 @@
 awsAccountId: "654654324108"
+
+images:
+  processStockFeed:
+    name: process-stock-feed
+    buildContext: src/lambda/process_stock_feed
