--- a/serverless.yml
+++ b/serverless.yml
@@ -15,7 +15,7 @@ custom:
 
 provider:
   name: aws
-  runtime: python3.11
+  runtime: provided.al2  # Use the provided runtime for custom images
   region: eu-west-2
   timeout: 300
   memorySize: 2048
@@ -63,21 +63,9 @@ functions:
   process-stock-feed:
     description: "Process stock feed"
     role: ${ssm:/${self:service}/process-stock-feed/lambda-iam-role/arn}
-    handler: src.lambda.process_stock_feed.main.lambda_handler
-    package:
-      patterns:
-        - "!node_modules/**"
-        - "!yarn.lock"
-        - "!package-lock.json"
-        - "!package.json"
-      include:
-        - "src/lambda/process_stock_feed/**"
-        - "src/shared/**"
-        - "src/__init__.py"
-    timeout: 900
-    memorySize: 2048
-    layers:
-      - { Ref: PythonRequirementsLambdaLayer }
+    image:
+      name: process-stock-feed
+      uri: ${self:custom.environment.awsAccountId}.dkr.ecr.eu-west-2.amazonaws.com/process-stock-feed:latest 
     environment:
       AWS_ACCOUNT_ID: ${self:custom.environment.awsAccountId}
     events:
